# signed-distance-fields

./: CMakeLists.txt
include/: math.hpp  object.hpp  raytracer.hpp  screen.hpp  shader.hpp
src/: main.cpp  objects.cpp  rt.cpp  screen.cpp  shaders.cpp
